# cdh_firmware_csdc5

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  README.md  TODO  analyze.sh  boot.bat  boot.sh  clean.sh  flash.sh  mem.ld  openocd.cfg
cmake/: clang.cmake  gcc.cmake  static.cmake  toolchain.cmake
config/: FreeRTOSConfig.h  stm32h7xx_hal_conf.h
docs/: build.md  git-workflow.md  layout.md
scripts/: task_stack.py
src/: clock.cpp  hardware_init.cpp  hardware_init.h  interrupts.cpp  interrupts.h  isr_vec.s  main.cpp  os.cpp  startup.s  stm32h7xx_hal_conf.h
src/hardware/: clock.cpp  gpio.cpp  gpio.h  gpio_new.cpp  gpio_new.h  gpio_old.cpp  hardware.cpp  hardware.h  hw_access.h  init.cpp  init.h  interrupts.cpp  interrupts.h  random.cpp  random.h  spi.cpp  spi.cppx  spi.h  uart.cpp  uart.h
src/os/: async.h  os.cpp  os.h  taskmgr.cpp  taskmgr.h
src/startup/: main.cpp  startup.s
src/util/: cpp_rt.cpp  crypto.cpp  crypto.h  debug.cpp  debug.h  i2a.cpp  i2a.h  lookup.h  prandom.cpp  prandom.h  random.cpp  random.h
